--- a/yml/translations.yml
+++ b/yml/translations.yml
@@ -1,5 +1,5 @@
 en:
-  matadata:
+  metadata:
     iptc:
       object_type_reference: Object Type Reference
       object_attribute_reference: Object Attribute Reference
@@ -1386,6 +1386,48 @@ en:
         'False': 'False'
         'True': 'True'
         Unknown: Unknown
+      authors_position: Authors Position
+      caption_writer: Caption Writer
+      category: Category
+      city: City
+      color_mode: Color Mode
+      color_mode_values:
+        '0': Bitmap
+        '1': Grayscale
+        '2': Indexed
+        '3': RGB
+        '4': CMYK
+        '7': Multichannel
+        '8': Duotone
+        '9': Lab
+      country: Country
+      credit: Credit
+      date_created: Date Created
+      document_ancestors: Document Ancestors
+      embedded_xmp_digest: Embedded XMP Digest
+      headline: Headline
+      history: History
+      icc_profile_name: ICC Profile Name
+      instructions: Instructions
+      legacy_iptc_digest: Legacy IPTC Digest
+      sidecar_for_extension: Sidecar For Extension
+      state: State
+      supplemental_categories: Supplemental Categories
+      text_layer_name: Text Layer Name
+      text_layer_text: Text Layer Text
+      transmission_reference: Transmission Reference
+      urgency: Urgency
+      urgency_values:
+        '0': 0 (reserved)
+        '1': 1 (most urgent)
+        '2': '2'
+        '3': '3'
+        '4': '4'
+        '5': 5 (normal urgency)
+        '6': '6'
+        '7': '7'
+        '8': 8 (least urgent)
+        '9': 9 (user-defined priority)
       artist: Artist
       bits_per_sample: Bits Per Sample
       compression: Compression
@@ -1527,7 +1569,7 @@ en:
       owner: Owner
       web_statement: Web Statement
 de:
-  matadata:
+  metadata:
     iptc:
       object_type_reference: Objekttypreferenz
       object_attribute_reference: Gattung
@@ -2332,6 +2374,33 @@ de:
       title: Titel
       trapped_values:
         Unknown: Unbekannt
+      authors_position: Autorenposition
+      caption_writer: Bildtextautor
+      category: Kategorie
+      city: Stadt/Ort
+      color_mode: Farbmodus
+      color_mode_values:
+        '1': Graustufen
+        '2': Indiziert
+        '7': Mehrkanal
+        '8': Zweiton
+      country: Land
+      credit: Anbieter
+      date_created: Erstellungsdatum
+      headline: Überschrift
+      icc_profile_name: ICC-Profil Name
+      instructions: Anweisungen
+      legacy_iptc_digest: Bisheriger IPTC Kennwert
+      state: Bundesland/Kanton
+      supplemental_categories: Zusätzliche Kategorien
+      transmission_reference: Anbietervermerk
+      urgency: Dringlichkeit
+      urgency_values:
+        '0': 0 (reserviert)
+        '1': 1 (sehr dringend)
+        '5': 5 (normale Dringlichkeit)
+        '8': 8 (geringe Dringlichkeit)
+        '9': 9 (benutzerdefinierte Priorität)
       artist: Künstler
       bits_per_sample: Anzahl der Bits pro Komponente
       compression: Komprimierungsschema
