--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "repository": "git@github.com:Scompler/exiftool-bindings.git",
+  "description": "Bindings for exiftool",
+  "main": "index.js",
   "scripts": {
     "build": "node scripts/build.js"
   },
