--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@scompler/exiftool-bindings",
   "author": "Scompler",
   "license": "SEE LICENSE IN LICENSE.md",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "repository": "git@github.com:Scompler/exiftool-bindings.git",
   "description": "Bindings for exiftool",
   "main": "./dist/main.js",
@@ -22,6 +22,7 @@
     "eslint": "^7.32.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "mime-db": "^1.50.0",
     "prettier": "^2.4.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
