--- a/yml/translations.yml
+++ b/yml/translations.yml
@@ -697,6 +697,26 @@ en:
         '1': Differential Corrected
       gpsh_positioning_error: GPS Horizontal Positioning Error
     xmp:
+      custom_field_1: Custom Field 1
+      custom_field_10: Custom Field 10
+      custom_field_11: Custom Field 11
+      custom_field_12: Custom Field 12
+      custom_field_13: Custom Field 13
+      custom_field_14: Custom Field 14
+      custom_field_15: Custom Field 15
+      custom_field_16: Custom Field 16
+      custom_field_17: Custom Field 17
+      custom_field_18: Custom Field 18
+      custom_field_19: Custom Field 19
+      custom_field_2: Custom Field 2
+      custom_field_20: Custom Field 20
+      custom_field_3: Custom Field 3
+      custom_field_4: Custom Field 4
+      custom_field_5: Custom Field 5
+      custom_field_6: Custom Field 6
+      custom_field_7: Custom Field 7
+      custom_field_8: Custom Field 8
+      custom_field_9: Custom Field 9
       app_info_application: App Info Application
       app_info_item_uri: App Info Item URI
       app_info_version: App Info Version
